apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__operation_arg_always_commas@report.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: generated
---
result:
  statsReportKey: "# QueryArgLength\nquery QueryArgLength($enumInputType:EnumInputType,$enumInputWithAVerrrrrrrrrrrryLongNameSoLineLengthIsOver80:SomeEnum){enumInputQuery(enumInput:$enumInputWithAVerrrrrrrrrrrryLongNameSoLineLengthIsOver80 inputType:$enumInputType){enumResponse}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - enumResponse
      isInterface: false
    Query:
      fieldNames:
        - enumInputQuery
      isInterface: false
