apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__operation_with_single_variable@report.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: generated
---
result:
  statsReportKey: "# QueryWithVar\nquery QueryWithVar($input_enum:SomeEnum){enumInputQuery(enumInput:$input_enum){listOfBools}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - listOfBools
      isInterface: false
    Query:
      fieldNames:
        - enumInputQuery
      isInterface: false
