apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__ordered_fields_and_variables@bridge.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: bridge_result
---
result:
  statsReportKey: "# VariableScalarInputQuery\nquery VariableScalarInputQuery($boolInput:Boolean!,$floatInput:Float!,$idInput:ID!,$intInput:Int!,$listInput:[String!]!,$nullableStringInput:String,$stringInput:String!){sortQuery(INTInput:$intInput boolInput:$boolInput floatInput:$floatInput idInput:$idInput listInput:$listInput nullableStringInput:$nullableStringInput stringInput:$stringInput){CCC aaa id nullableId zzz}}"
  referencedFieldsByType:
    Query:
      fieldNames:
        - sortQuery
      isInterface: false
    SortResponse:
      fieldNames:
        - CCC
        - aaa
        - id
        - nullableId
        - zzz
      isInterface: false
